--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,45 @@
 Package: doutorado
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Dados e Texto da Tese de Doutorado
+Version: 0.2.0
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+    c(person('Julio', 'Trecenti', 
+             email = 'julio.trecenti@gmail.com', 
+             role = c('cre', 'aut'),
+             comment = c(ORCID = "0000-0002-1680-6389")),
+      person(given = "Curso-R",
+             role = c("cph", "fnd")))
+Description: Leitura e analise dos dados do doutorado.
+Depends: 
+    R (>= 3.5)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-URL: https://github.com/jtrecenti/doutorado
-BugReports: https://github.com/jtrecenti/doutorado/issues
+Imports: 
+    magrittr,
+    dplyr,
+    tibble,
+    purrr,
+    stringr,
+    golem,
+    shiny,
+    auth0,
+    bs4Dash, 
+    config,
+    fresh,
+    highcharter,
+    reactable,
+    readr,
+    rlang,
+    scales,
+    shinyWidgets,
+    shinyalert,
+    viridis
+Remotes:
+  ThinkR-Open/golem,
+  jtrecenti/bs4Dash
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
