--- a/.github/workflows/update-app.yaml
+++ b/.github/workflows/update-app.yaml
@@ -20,9 +20,10 @@ jobs:
           GITHUB_PAT: ${{ secrets.PAT }}
         run: |
           options(repos = "https://packagemanager.rstudio.com/all/__linux__/bionic/latest")
+          install.packages("stringi")
           install.packages(c(
             "remotes", "rsconnect", "pkgdown", "pkgload", "xaringan",
-            "bookdown", "pagedown", "stringi"
+            "bookdown", "pagedown"
           ))
           remotes::install_github("jtrecenti/doutorado")
         shell: Rscript {0}
