--- a/inst/book/_output.yml
+++ b/inst/book/_output.yml
@@ -1,18 +1,18 @@
-bookdown::gitbook:
-  dev: svglite
-  edit: null
-  css: ["assets/css/bookdown.css"]
-  config:
-    toc:
-      collapse: none
-      before: |
-        <li><a href="./">Tese</a></li>
-      after: |
-        <li><a href="https://bookdown.org" target="blank">Published with bookdown</a></li>
-    sharing:
-      github: no
-      facebook: no
-    download: ["pdf"]
+# bookdown::gitbook:
+#   dev: svglite
+#   edit: null
+#   css: ["assets/css/bookdown.css"]
+#   config:
+#     toc:
+#       collapse: none
+#       before: |
+#         <li><a href="./">Tese</a></li>
+#       after: |
+#         <li><a href="https://bookdown.org" target="blank">Published with bookdown</a></li>
+#     sharing:
+#       github: no
+#       facebook: no
+#     download: ["pdf"]
 
 pagedown::thesis_paged:
   toc: true
