mudando a ordem dos arquivos

--- a/inst/book/_output.yml
+++ b/inst/book/_output.yml
@@ -1,25 +1,25 @@
-# bookdown::gitbook:
-#   dev: svglite
-#   edit: null
-#   css: ["assets/css/bookdown.css"]
-#   config:
-#     toc:
-#       collapse: none
-#       before: |
-#         <li><a href="./">Tese</a></li>
-#       after: |
-#         <li><a href="https://bookdown.org" target="blank">Published with bookdown</a></li>
-#     sharing:
-#       github: no
-#       facebook: no
-#     download: ["pdf"]
+bookdown::bs4_book:
+  dev: svglite
+  edit: null
+  css: ["assets/css/bookdown.css"]
+  config:
+    toc:
+      collapse: none
+      before: |
+        <li><a href="./">Tese</a></li>
+      after: |
+        <li><a href="https://bookdown.org" target="blank">Published with bookdown</a></li>
+    sharing:
+      github: no
+      facebook: no
+    download: ["pdf"]
 
-pagedown::thesis_paged:
-  toc: false
-  lof: false
-  lot: false
-  # lof-title: "Lista de Figuras"
-  # lot-title: "Lista de Tabelas"
-  css: ["thesis", "assets/css/pagedown.css"]
-  template: "assets/template.html"
-  self_contained: true
+# pagedown::thesis_paged:
+#   toc: false
+#   lof: false
+#   lot: false
+#   # lof-title: "Lista de Figuras"
+#   # lot-title: "Lista de Tabelas"
+#   css: ["thesis", "assets/css/pagedown.css"]
+#   template: "assets/template.html"
+#   self_contained: true
