--- a/inst/book/_bookdown.yml
+++ b/inst/book/_bookdown.yml
@@ -2,7 +2,7 @@ book_filename: tese
 output_dir: relatorio
 clean: [bookdown.bbl]
 delete_merged_file: true
-rmd_files: ["index.Rmd", "04-model.Rmd"]
+rmd_files: ["index.Rmd", "02-metodologia.Rmd"]
 language:
   label:
     fig: "Figura "
