revisão do capitulo 1

--- a/inst/book/_quarto.yml
+++ b/inst/book/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 book:
   title: "Resolvendo Captchas"
+  subtitle: "Usando aprendizado parcialmente supervisionado"
   author: "Julio Trecenti"
   date: "2022-10-30"
   chapters:
