arrumando subtitulo na versão html

--- a/inst/book/_quarto.yml
+++ b/inst/book/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 book:
   title: "Resolvendo Captchas"
-  subtitle: "Usando aprendizado parcialmente supervisionado"
+  subtitle: "Usando raspagem de dados e aprendizado fracamente supervisionado"
   author: "Julio Trecenti"
   date: "2022-10-30"
   chapters:
